# hkvsobekpy

./: .gitignore  README.md  pyproject.toml
hkvsobekpy/: __init__.py  __main__.py
hkvsobekpy/core/: plausibility.py  utils.py  waterlevelstat.py
hkvsobekpy/io/: bui.py  his.py
notebook/: Reuse MetaData Object.ipynb  plausibiliteits validatie.ipynb  revisit lezen HIS file.ipynb  waterstand statistiek.ipynb
notebook/input_data/data_daniel4his_bui/: STNBUI08.BUI
notebook/input_data/plausibiliteits-validatie/: Sbk_FGrPt_n.dbf  T100ST2.BUI
notebook/input_data/waterstand-statistiek/: input_locaties.dbf  input_locaties.prj  input_locaties.qpj
notebook/output_data/plausibiliteits-validatie/: calcpnt_calc1_WaterlevelmeanmA.csv  comb_his_bui.csv  reachseg_1_Dischargemeanms.csv  reachseg_1_Waterlevelslopemea.csv
notebook/output_data/waterstand-statistiek/: waterstandstatistiek_output_1.csv  waterstandstatistiek_output_2.dbf  waterstandstatistiek_output_2.shp  waterstandstatistiek_output_2.shx
