
[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hkvsobekpy"
author = "Mattijn van Hoek"
author-email = "hoek@hkv.nl"
home-page = "https://github.com/HKV-products-services/hkvsobekpy"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

